feat: implement full-stack garage management system with modules for service, inventory, finance, CMS, and identity authentication